<resources>
    <string name="app_name">Yours Dhobi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">FREE Pick-up and Delivery</string>
    <string name="slide_1_desc">Pick-up and delivery are always FREE. We can even arrange to come by while you’re out.</string>
    <string name="slide_2_title">Hand Care</string>
    <string name="slide_2_desc">We wash clothes by hand as we understand the value of your clothes!</string>
    <string name="slide_3_title">Easy Ordering</string>
    <string name="slide_3_desc">Create an account online and doing the laundry will be as easy as ordering a pizza.</string>
    <string name="slide_4_title">Fast Turnaround</string>
    <string name="slide_4_desc">Same-day, next-day and two-day delivery options so your clothes are delivered when you need them.</string>
    <string name="slide_5_title">Quality Clean</string>
    <string name="slide_5_desc">From sorting to washing, drying to folding - our laundry pros know how to give your clothes an optimal clean.</string>
    <string name="slide_6_title">365 Support</string>
    <string name="slide_6_desc">Our support agents are on standby to ensure you are laundry needs are met, 7 days a week - 365 days a year.</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_login">Sign in</string>
    <string name="profile">Edit Profile</string>
    <string name="orders">Your Orders</string>
    <string name="logout">Logout</string>
    <string name="schedule_pickup">Schedule Pickup</string>
    <string name="coupons">Coupons</string>
    <string name="donateclothes">Donate Clothes</string>
    <string name="termsofusage">Terms of Usage</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="contact_us">Contact Us</string>
    <string name="communicate">Communicate</string>
    <string name="prompt_email"> Email</string>
    <string name="prompt_password"> Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="reg_email_hint">Email </string>
    <string name="reg_name_hint">Name</string>
    <string name="reg_department_hint">Department</string>
    <string name="reg_contact_hint">Contact</string>
    <string name="reg_password_hint">Password</string>
    <string name="reg_confirm_password_hint">Confirm password</string>
    <string name="reg_success">Registered Successfully!</string>
    <string name="change_password_success">Password Changed Successfully!</string>
    <string name="update_success">Updated Successfully!</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="error">Sorry there was an error!"</string>
    <string name="select_service">Select Service</string>
    <string name="login">&server;service/authenticate/login</string>
    <string name="loginById">&server;service/authenticate/getUserById</string>
    <string name="register">&server;service/authenticate/register</string>
    <string name="getOrder">&server;service/order/getOrder/</string>
    <string name="getOrderByUserId">&server;service/order/getOrderByUserId/</string>
    <string name="getTodayOrders">&server;service/order/getTodayOrders/</string>
    <string name="getUpcomingOrders">&server;service/order/getUpcomingOrders/</string>
    <string name="getCompletedOrders">&server;service/order/getCompletedOrders/</string>
    <string name="changePasswordUsingPhone">&server;service/authenticate/changePasswordUsingPhone</string>
    <string name="newOrder">&server;service/order/newOrder/</string>
    <string name="cancelOrder">&server;service/order/cancelOrder/</string>
    <string name="updateUser">&server;service/authenticate/updateUser</string>
    <string name="get_feedback">&server;service/feedback/getFeedback/</string>
    <string name="update_feedback">&server;service/feedback/newFeedback/</string>
    <string name="verifyPickup">&server;service/order/verifyPickup/</string>
    <string name="verifyDelivery">&server;service/order/verifyDelivery/</string>
    <string name="createOffer">&server;service/order/createOffer/</string>
    <string name="createDonation">&server;service/order/createDonation/</string>
    <string name="checkIfUserHasUsedCoupon">&server;service/order/checkIfUserHasUsedCoupon/</string>
    <string name="getOffer">&server;service/order/getOffer/</string>
    <string name="getImages">&server;service/order/getImages/</string>
    <string name="createUserOfferRelation">&server;service/order/createUserOfferRelation/</string>
    <string name="refuseOrder">&server;service/order/refuseOrder/</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="login_success">Logged In Successfully</string>
    <string name="profilephoto">ProfilePhoto</string>
    <string name="title_activity_schedule_pickup">SchedulePickup</string>
    <string name="title_select_service">Select Service</string>
    <string name="title_create_order">Create Order</string>
    <string name="title_add_address">Add Address</string>
    <string name="title_finish_order">Checkout</string>
    <string name="blankets_single">Blankets (Single Bed)</string>
    <string name="blankets_double">Blankets (Double Bed)</string>
    <string name="bedsheet_single">Bedsheet (Single Bed)</string>
    <string name="bedsheet_double">Bedsheet (Double Bed)</string>
    <string name="jackets">Jackets</string>
    <string name="woollens">Woollens</string>
    <string name="bottoms">Bottoms</string>
    <string name="create_order">Create Order</string>
    <string-array name="services">
        <item>Steam Ironing</item>
        <item>Wash and Fold (Kg Basis)</item>
        <item>Wash and Iron (Kg Basis)</item>
        <item>Wash and Iron</item>
        <item>Dry Cleaning</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_your_orders">YourOrders</string>
    <string name="order_date">Order Date :</string>
    <string name="order_id">Order Id:</string>
    <string name="pickup_date">Pickup Date:</string>
    <string name="status">Status:</string>
    <string name="title_activity_register_washer_man">RegisterWasherMan</string>
    <string name="api_key">AIzaSyBT7r6sG8_M_b7qJeRdWujK4S8x0B2uGZ0</string>
    <string name="agent_corner">Agent Corner</string>
    <string name="add_washerman">Add Washerman</string>
    <string name="title_activity_pickup">PickupActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_example">Example action</string>
    <string name="item_title">Palais Garnier</string>
    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="forget_password">Forget Password</string>
    <string name="termsofuse">Terms of Use</string>
    <string name="rate_card">Rate Card</string>
    <string name="title_activity_rate_card">RateCardActivity</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="offers">Offers</string>
    <string name="change_address">Change Address</string>
    <string name="place_order">Place Order</string>
    <string name="shop_by_category">Shop By Category</string>
    <string name="title_activity_donate_clothes">DonateClothes</string>
    <string name="title_activity_terms_and_condition">TermsAndCondition</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>
    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="steam_ironing">Steam Ironing</string>
    <string name="wash_and_fold">Wash and Fold</string>
    <string name="wash_and_iron">Wash and Iron</string>
    <string name="express_services_24_hours">Express Services (24 Hours)</string>
</resources>