<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_schedule_pickup"
            android:icon="@drawable/ic_add_shopping_cart_black_24dp"
            android:title="@string/schedule_pickup"/>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share"
                app:showAsAction="ifRoom"
                />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback_black_24dp"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_person_pin_black_24dp"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
