<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/nav_header_vertical_spacing"
    android:layout_margin="@dimen/nav_header_vertical_spacing">

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="@dimen/nav_header_vertical_spacing"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/f"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="27dp"
            android:padding="10dp"
            android:text="@string/order_id"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="27dp" />

        <TextView
            android:id="@+id/order_id"
            android:layout_width="113dp"
            android:layout_height="41dp"
            android:padding="10dp"
            android:layout_alignStart="@+id/order_date"
            android:text="id"
            android:layout_alignLeft="@+id/order_date" />

        <TextView
            android:id="@+id/l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/f"
            android:layout_marginTop="54dp"
            android:padding="10dp"
            android:text="@string/order_date"
            android:textStyle="bold"
            android:layout_alignLeft="@+id/f" />

        <TextView
            android:id="@+id/order_date"
            android:layout_width="113dp"
            android:layout_height="32dp"
            android:layout_alignBottom="@+id/l"
            android:layout_alignStart="@+id/order_pickup_date"
            android:padding="10dp"
            android:text="date"
            android:layout_alignLeft="@+id/order_pickup_date" />

        <TextView
            android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/f"
            android:layout_marginTop="109dp"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="@string/pickup_date"
            android:layout_alignLeft="@+id/f" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/a"
            android:layout_marginEnd="18dp"
            android:id="@+id/order_pickup_date"
            android:padding="10dp"
            android:text="date for pickup"
            android:layout_alignParentRight="true"
            android:layout_marginRight="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/f"
            android:layout_marginTop="164dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:id="@+id/s"
            android:text="@string/status"
            android:layout_alignLeft="@+id/f" />

        <TextView
            android:id="@+id/order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/order_id"
            android:layout_alignTop="@+id/s"
            android:padding="10dp"
            android:text="status of order"
            android:layout_alignLeft="@+id/order_id" />

    </RelativeLayout>
</android.support.v7.widget.CardView>